# Job-tasks

./: .gitignore
CustomStringWrapper/: Task description.txt
CustomStringWrapper/Sources/: ReadMe.rtf
CustomStringWrapper/Sources/hw/: hw.1  main.cpp  mstring.cpp  mstring.h  result.txt
CustomStringWrapper/Sources/hw.xcodeproj/: project.pbxproj
CustomStringWrapper/Sources/hw.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
CustomStringWrapper/Sources/hw.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: hw.xcscheme  xcschememanagement.plist
DNSCache/: README.md  build.sh
DNSCache/data/: input.txt
DNSCache/src/: CMakeLists.txt  DnsCache.cpp  DnsCacheApp.cpp
DNSCache/src/Tests/: BaseTest.cpp  CMakeLists.txt  MultiThreadRaceSingletonTest.cpp  MultiThreadStressTest.cpp
DNSCache/src/include/: DnsCache.h
HtmlExtractor/Executable_Win/: ReadMe.odt  options.xml  run_example.bat
HtmlExtractor/Sources_Qt/: HtmlExtractorTaskApp.pro  analyzeroptions.cpp  analyzeroptions.h  blockanalyzer.cpp  blockanalyzer.h  htmlsourceproviderfromweb.cpp  htmlsourceproviderfromweb.h  interfaces.h  main.cpp  outputformatter.cpp  outputformatter.h  textsavertofile.cpp  textsavertofile.h  webkithtmldomparser.cpp  webkithtmldomparser.h  webpageextractor.cpp  webpageextractor.h
